--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "axios": "^0.18.0",
         "body-parser": "^1.18.3",
         "dotenv": "^8.2.0",
-        "express": "^4.16.3"
+        "express": "^4.16.3",
+        "multer": "^1.4.0"
     },
     "author": "Daniel Hsieh",
     "license": "MIT"
